# PyFiveInARow

./: CMakeLists.txt  Readme.md  env.yaml  game_config.py  main.py  requirements.txt
src/: game.py  game_AI.py  game_ui.py  game_utils.py  monte_carlo_tree_search.py  singleton.py  utils.py
src/cpp/: README.md  bindings.cpp  monte_carlo_tree_search.cpp  monte_carlo_tree_search.h  pyproject.toml  test.cpp
