[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_MCTS"
version = "0.1.0"
description = "Python interface for Monte Carlo Tree Search in a five-in-a-row game."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "pybind11"
]

[tool.setuptools]
packages = [{ include = "py_five_in_row" }]